Fixed navbar being a bit weird, and also now wanna try to implement the pages

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -7,19 +7,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 2rem;
+    width: 100%;
+    padding: 0 3rem;
   }
   
   .navbar-logo {
     display: flex;
     align-items: center;
     margin-left: -1rem;
+    
   }
   
   .logo {
-    height: 60px;
+    height: 80px;
     max-width: 200px;
   }
   
